testdata/baselines/reference/submodule/compiler/jsdocTypedef_propertyWithNoType.errors.txt
/a.js(6,12): error TS8010: Type annotations can only be used in TypeScript files.


==== /a.js (1 errors) ====
    /**
     * @typedef Foo
     * @property foo
     */
    
    /** @type {Foo} */
               ~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    const x = { foo: 0 };
    